# code_examples

cpp-solutions/huffman/: CMakeLists.txt  easy.cpp  huffman-tool.cpp  output.txt
cpp-solutions/huffman/huffman_lib/: CMakeLists.txt  bit_reader.cpp  counter.cpp  huffman_tree.cpp  serialization.cpp
cpp-solutions/huffman/huffman_lib/include/: bit_writer.h  consts.h  counter.h  huffman_tree.h
cpp-solutions/huffman/unit-tests/: CMakeLists.txt  tests.cpp
cpp-solutions/huffman_lib/: bit_code.cpp  bit_writer.cpp
cpp-solutions/huffman_lib/include/: bit_code.h  bit_reader.h  serialization.h
cpp-solutions/orderbook/: CMakeLists.txt  main.cpp  orderbook_circ_buff.hpp  orderbook_map.hpp  pcapng.hpp  pref.hpp  readme.md  report.txt  types.hpp
java-solutions/: IntList.java  MyScanner.java  Reverse.java  ReverseAvg.java  ReverseOctAbc.java  Sum.java  SumLongOctal.java  WordStatInput.java  WordStatWordsShingles.java  Wspp.java  WsppCountLastL.java
java-solutions/expression/: Add.java  BinaryExpression.java  Const.java  Divide.java  Expressions.java  Main.java  Multiply.java  Subtract.java  Variable.java
java-solutions/game/: Cell.java  Game.java  HumanPlayer.java  Main.java  Player.java  RandomPlayer.java  SequentialPlayer.java  TicTacToeBoard.java  TicTacToePosition.java  Tournament.java
java-solutions/markup/: AbsList.java  AbstractMarkUp.java  Emphasis.java  Item.java  ListItem.java  Mark.java  OrderedList.java  Paragraph.java  Strikeout.java  Strong.java  Text.java  UnorderedList.java
java-solutions/md2html/: Md2Html.java
(+6 files in other folders)
